# DeepTutor

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
deeptutor/agents/: base_agent.py
deeptutor/agents/chat/: agentic_pipeline.py  chat_agent.py
deeptutor/agents/guide/agents/: design_agent.py
deeptutor/agents/math_animator/agents/: code_generator_agent.py  visual_review_agent.py
deeptutor/agents/notebook/: analysis_agent.py
deeptutor/agents/question/: coordinator.py
deeptutor/agents/question/agents/: followup_agent.py  generator.py  idea_agent.py
deeptutor/agents/research/: data_structures.py  mode_strategy.py  request_config.py  research_pipeline.py
deeptutor/agents/research/agents/: decompose_agent.py  note_agent.py  rephrase_agent.py  reporting_agent.py  research_agent.py
deeptutor/agents/research/utils/: citation_manager.py
deeptutor/agents/solve/: main_solver.py
deeptutor/agents/solve/agents/: planner_agent.py  solver_agent.py  writer_agent.py
deeptutor/agents/solve/memory/: scratchpad.py
deeptutor/api/: main.py
deeptutor/api/routers/: co_writer.py  knowledge.py  memory.py  tutorbot.py
deeptutor/api/utils/: task_log_stream.py
deeptutor/capabilities/: deep_question.py  deep_research.py  deep_solve.py  math_animator.py
deeptutor/config/: constants.py
deeptutor/knowledge/: add_documents.py  initializer.py
deeptutor/services/: path_service.py
deeptutor/services/config/: provider_runtime.py
deeptutor/services/llm/: config.py  executors.py  utils.py
deeptutor/services/memory/: service.py
deeptutor/services/rag/: service.py
deeptutor/services/rag/pipelines/: llamaindex.py
deeptutor/services/search/: __init__.py
deeptutor/services/search/providers/: __init__.py
deeptutor/services/session/: context_builder.py  turn_runtime.py
deeptutor/services/setup/: init.py
deeptutor/services/tutorbot/: manager.py
deeptutor/tools/: brainstorm.py  rag_tool.py  reason.py
deeptutor/tools/builtin/: __init__.py
deeptutor/tools/prompting/hints/en/: rag.yaml
deeptutor/tools/prompting/hints/zh/: rag.yaml
deeptutor/tutorbot/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
deeptutor/tutorbot/agent/team/: __init__.py  board.py  mailbox.py  state.py  tools.py
deeptutor/tutorbot/agent/tools/: cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
deeptutor/tutorbot/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  wecom.py  whatsapp.py
deeptutor/tutorbot/config/: paths.py  schema.py
deeptutor/tutorbot/cron/: service.py
deeptutor/tutorbot/heartbeat/: service.py
deeptutor/tutorbot/providers/: __init__.py  deeptutor_adapter.py  litellm_provider.py  registry.py
deeptutor/tutorbot/session/: manager.py  sqlite_adapter.py
deeptutor/tutorbot/templates/: HEARTBEAT.md
deeptutor/tutorbot/utils/: evaluator.py  helpers.py
deeptutor_cli/: README.md  bot.py  chat.py  kb.py  main.py  memory.py  provider_cmd.py
requirements/: cli.txt  dev.txt  math-animator.txt  server.txt  tutorbot.txt
scripts/: start_tour.py
tests/cli/: test_chat_cli.py
tests/knowledge/: test_kb_directory_layout.py
tests/services/config/: test_provider_runtime.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(utility)/memory/: page.tsx
web/app/(workspace)/: page.tsx
web/app/(workspace)/agents/: page.tsx
web/app/(workspace)/agents/[botId]/chat/: page.tsx
web/components/: Mermaid.tsx  SessionList.tsx
web/components/chat/home/: ChatComposer.tsx  ChatMessages.tsx  TracePanels.tsx  composer-field.tsx
web/components/common/: MarkdownRenderer.tsx  RichMarkdownRenderer.tsx  SimpleMarkdownRenderer.tsx
web/components/math-animator/: MathAnimatorConfigPanel.tsx
web/components/quiz/: QuizConfigPanel.tsx
web/components/research/: ResearchConfigPanel.tsx  ResearchOutlineEditor.tsx
web/components/sidebar/: SidebarShell.tsx  TutorBotRecent.tsx
web/context/: UnifiedChatContext.tsx
web/hooks/: useChatAutoScroll.ts
web/lib/: markdown-display.ts  math-animator-types.ts  research-types.ts
web/tests/: markdown-display.test.ts
